--- a/app/src/main/res/layout/category_layout.xml
+++ b/app/src/main/res/layout/category_layout.xml
@@ -6,32 +6,34 @@
     android:layout_width="match_parent"
     android:layout_height="130dp"
     android:layout_margin="8sp"
-    app:cardCornerRadius="4dp"
+
+    app:cardCornerRadius="10dp"
     app:cardElevation="8dp">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="15dp"
         android:gravity="center"
-
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/category_title"
-            android:layout_width="wrap_content"
+            android:layout_width="128dp"
             android:layout_height="wrap_content"
+            android:backgroundTint="#3128B6"
             android:fontFamily="@font/baloo"
-            android:textSize="20sp"
             android:gravity="center"
-            android:text="Carnival Cinemas" />
+            android:text="Carnival Cinemas"
+            android:textSize="20sp" />
 
         <ImageView
             android:id="@+id/category_img"
             android:layout_width="105dp"
             android:layout_height="89dp"
             android:layout_marginLeft="40dp"
-            android:src="@drawable/img" />
+            android:src="@drawable/park_category" />
 
 
     </LinearLayout>
