--- a/app/src/main/res/layout/most_viewed_card_layout.xml
+++ b/app/src/main/res/layout/most_viewed_card_layout.xml
@@ -18,7 +18,7 @@
             android:id="@+id/most_viewed_img"
             android:layout_width="120dp"
             android:layout_height="match_parent"
-            android:src="@drawable/img" />
+            android:src="@drawable/park_category" />
 
         <LinearLayout
             android:layout_width="match_parent"
