--- a/app/src/main/res/layout/activity_all_categories.xml
+++ b/app/src/main/res/layout/activity_all_categories.xml
@@ -25,9 +25,9 @@
         android:layout_height="30dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        android:onClick="backBtn"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:onClick="backBtn"
         app:srcCompat="@drawable/back_btn_icon"
         tools:ignore="OnClick" />
 
@@ -41,4 +41,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <RelativeLayout
+        android:id="@+id/loading_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#BE858080"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="74dp"
+            android:layout_height="73dp"
+            android:indeterminateTint="#FDAD26"
+            android:visibility="visible" />
+    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
