--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -221,8 +221,8 @@
                     </LinearLayout>
 
                     <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="58dp"
+                        android:layout_height="match_parent"
                         android:layout_marginRight="15dp"
                         android:orientation="vertical">
 
@@ -400,11 +400,30 @@
                     app:layout_constraintHorizontal_bias="0.5"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />
+
             </LinearLayout>
+
 
         </ScrollView>
 
     </LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/user_dash_loading_screen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#BE858080"
+        android:gravity="center"
+        android:visibility="gone">
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="74dp"
+            android:layout_height="73dp"
+            android:indeterminateTint="#FDAD26"
+            android:visibility="visible" />
+    </RelativeLayout>
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
