--- a/app/src/main/res/layout/category_layout.xml
+++ b/app/src/main/res/layout/category_layout.xml
@@ -29,7 +29,7 @@
             android:textSize="20sp" />
 
         <ImageView
-            android:id="@+id/category_img"
+            android:id="@+id/location_img"
             android:layout_width="105dp"
             android:layout_height="89dp"
             android:layout_marginLeft="40dp"
