highlighted category made clickable and opens the locations. distance converted to KM

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -143,6 +143,7 @@
                             android:layout_width="60dp"
                             android:layout_height="60dp"
                             android:background="@drawable/rounded_corner"
+                            android:onClick="highlightedCategoryClicked"
                             android:backgroundTint="#7BDCD0"
                             android:padding="8dp">
 
@@ -173,6 +174,7 @@
                             android:layout_width="60dp"
                             android:layout_height="60dp"
                             android:background="@drawable/rounded_corner"
+                            android:onClick="highlightedCategoryClicked"
                             android:backgroundTint="#B9A0FD"
                             android:padding="8dp">
 
@@ -195,12 +197,14 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="15dp"
+
                         android:orientation="vertical">
 
                         <RelativeLayout
                             android:id="@+id/education_icon"
                             android:layout_width="60dp"
                             android:layout_height="60dp"
+                            android:onClick="highlightedCategoryClicked"
                             android:background="@drawable/rounded_corner"
                             android:backgroundTint="#F39B8B"
                             android:padding="8dp">
@@ -224,12 +228,14 @@
                         android:layout_width="58dp"
                         android:layout_height="match_parent"
                         android:layout_marginRight="15dp"
+
                         android:orientation="vertical">
 
                         <RelativeLayout
                             android:id="@+id/shops_icon"
                             android:layout_width="60dp"
                             android:layout_height="60dp"
+                            android:onClick="highlightedCategoryClicked"
                             android:background="@drawable/rounded_corner"
                             android:backgroundTint="#F8CA7C"
                             android:padding="8dp">
