--- a/app/src/main/res/layout/activity_all_categories.xml
+++ b/app/src/main/res/layout/activity_all_categories.xml
@@ -43,7 +43,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <RelativeLayout
-        android:id="@+id/loading_screen"
+        android:id="@+id/all_category_loading_screen"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#BE858080"
